# amxmodx

./: AmxModXExtended.csproj  AmxModXExtendedAPI.cs  AmxModXExtendedExamples.cs  AmxModXExtendedInterop.cs  AmxxMenuBridge.csproj  CHANGELOG.md  CMakeLists.txt  COMPILE_GUIDE.md  CoreAmxDemo.cs  MENU_BRIDGE_README.md  MenuBridge.cpp  MenuBridge.h  MenuBridgeImports.cs  MenuBridge_AMXX.vcxproj  MenuExample.cs  MenuManager.cs  README_EXTENDED.md  SamplePlugin.cs  TestCompile.cpp  WINDOWS_API_CONFLICTS_FIXED.md  build.bat  build.sh  cstrike_module_interface_analysis.md
amxmodx/: csharp_bridge.cpp  csharp_bridge.h
amxmodx/csharp/: AmxModX.CSharp.csproj  AmxModX.CStrike.csproj  AmxModXInterop.cs  AmxModXTestApp.csproj  CStrikeExample.cs  CStrikeInterop.cs  CStrikeStatisticsExample.cs  CStrikeTestApp.csproj  CStrikeTestProgram.cs  CStrike_README.md  CStrike_Statistics_Implementation_Summary.md  EngineAPI.cs  EngineExamples.cs  EngineInterop.cs  EntityMessageCvarExample.cs  README.md  TestProgram.cs  build_cstrike.bat
amxmodx/msvc12/: amxmodx_mm.vcxproj  amxmodx_mm.vcxproj.filters
modules/cstrike/: cstrike_bridge.cpp  cstrike_bridge.h
modules/cstrike/cstrike/: AMBuilder  CstrikeMain.cpp
modules/hamsandwich/: AMBuilder  amxx_api.cpp  csharp_bridge.cpp  csharp_bridge.h  hook_native.cpp
modules/hamsandwich/msvc12/: hamsandwich.vcxproj  hamsandwich.vcxproj.filters
